WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32382
REGRESSION (
r47255
): Content shifted down at software.opensuse.org
https://bugs.webkit.org/show_bug.cgi?id=32382
Summary
REGRESSION (r47255): Content shifted down at software.opensuse.org
Pacho Ramos
Reported
2009-12-10 08:47:00 PST
Created
attachment 44620
[details]
1.png The affected url is:
http://software.opensuse.org/112/en
As you can see, I need to scroll down for seeing most of the page, while this is not needed with firefox.
http://validator.w3.org/check?uri=http%3A%2F%2Fsoftware.opensuse.org%2F112%2Fen&charset=%28detect+automatically%29&doctype=Inline&group=0
reports it's XHTML 1.0 Transitional compliant Thanks a lot This is with webkitgtk-1.1.17
Attachments
1.png
(82.24 KB, image/png)
2009-12-10 08:47 PST
,
Pacho Ramos
no flags
Details
Reduction
(319 bytes, text/html)
2009-12-10 10:30 PST
,
mitz
no flags
Details
Do not clear floats that do not really intrude into the line
(19.62 KB, patch)
2009-12-14 13:33 PST
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2009-12-10 09:24:09 PST
Confirmed with
r51950
on Mac OS X. This doesn't happen with Safari 4.0.4.
Alexey Proskuryakov
Comment 2
2009-12-10 09:24:38 PST
<
rdar://problem/7460655
>
mitz
Comment 3
2009-12-10 10:30:59 PST
Created
attachment 44624
[details]
Reduction
mitz
Comment 4
2009-12-14 13:33:30 PST
Created
attachment 44818
[details]
Do not clear floats that do not really intrude into the line
mitz
Comment 5
2009-12-14 19:06:38 PST
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/52127
>.
Pacho Ramos
Comment 6
2009-12-15 07:10:56 PST
Thanks for the fast fix
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug