<rdar://problem/7460655> REGRESSION (r47255): Content shifted down at software.opensuse.org https://bugs.webkit.org/show_bug.cgi?id=32382

Reviewed by Darin Adler.

WebCore:

Test: fast/block/float/in-margin.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::getClearDelta): Floats that do not intrude into the line (because
they are in the margin) do not need to be cleared.

LayoutTests:

* fast/block/float/in-margin.html: Added.
* platform/mac/fast/block/float/in-margin-expected.checksum: Added.
* platform/mac/fast/block/float/in-margin-expected.png: Added.
* platform/mac/fast/block/float/in-margin-expected.txt: Added.



Canonical link: https://commits.webkit.org/43551@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52127 268f45cc-cd09-0410-ab3c-d52691b4dbfc